change container spacing to prevent offset footer on larger screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,11 @@ body {
   background-color: #bababa;
 }
 
+.container {
+  // set overall container to be at least the height of the window, prevent footer from looking offset on larger screens
+  min-height: 100vh;
+}
+
 .offset {
   margin-top: 51px;
 }
